--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-   "homepage": "https://pratichighosh.github.io/Image-steganography-/",
+  "homepage": "https://pratichighosh.github.io/Image-steganography/",
+
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
+
   "dependencies": {
     "@babel/core": "^7.26.0",
     "@babel/parser": "^7.26.2",
